# backend/wiki/user/models.py
@@ -1,6 +1,6 @@
 from typing import Optional
 
-from sqlalchemy import Column, String, Uuid, Boolean
+from sqlalchemy import Column, String, Uuid, Boolean, ForeignKey
 from uuid_extensions import uuid7
 
 from wiki.database.core import Base
@@ -16,8 +16,13 @@ class User(Base):
     last_name = Column(String, nullable=False)
     second_name = Column(String, nullable=True)
 
+    position = Column(String, nullable=True)
+
+    is_user_agreement_accepted = Column(Boolean, nullable=False, default=False)
     is_deleted = Column(Boolean, nullable=False, default=False)
-    is_trusted = Column(Boolean, nullable=False, default=False)
+
+    organization_id = Column(ForeignKey("organization.id"), nullable=True)
+    wiki_api_client_id = Column(ForeignKey("wiki_api_client.id"), nullable=True)
 
     def __init__(self,
                  email: str,
@@ -25,10 +30,18 @@ class User(Base):
                  last_name: str,
                  display_name: Optional[str] = None,
                  username: Optional[str] = None,
-                 second_name: Optional[str] = None):
+                 second_name: Optional[str] = None,
+                 position: Optional[str] = None,
+                 is_user_agreement_accepted: bool = False,
+                 organization_id: Optional[str] = None,
+                 wiki_api_client_id: Optional[str] = None):
         self.email = email
         self.username = username
         self.display_name = display_name
         self.first_name = first_name
         self.last_name = last_name
         self.second_name = second_name
+        self.position = position
+        self.is_user_agreement_accepted = is_user_agreement_accepted
+        self.organization_id = organization_id
+        self.wiki_api_client_id = wiki_api_client_id
